--- a/NowIAmReading/NowIAmReading/Base.lproj/Main.storyboard
+++ b/NowIAmReading/NowIAmReading/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SharedBookCell" rowHeight="93" id="uXu-qN-ouG" customClass="SharedBookTableViewCell" customModule="NowIAmReading" customModuleProvider="target">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="RecommendedBookCell" rowHeight="93" id="uXu-qN-ouG" customClass="RecommendedBookTableViewCell" customModule="NowIAmReading" customModuleProvider="target">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="uXu-qN-ouG" id="4TV-Rk-qn0">
                                             <autoresizingMask key="autoresizingMask"/>
@@ -58,7 +58,7 @@
                                             <outlet property="bookAuthor" destination="jm1-vv-xZ3" id="Jmi-eE-dLE"/>
                                             <outlet property="bookPicture" destination="tV9-TE-r5p" id="Fja-ta-qDw"/>
                                             <outlet property="bookRating" destination="Fx2-R9-M4I" id="JEK-O0-uXe"/>
-                                            <outlet property="bookSharedBy" destination="ate-5B-jhc" id="djR-df-ePR"/>
+                                            <outlet property="bookRecommendedBy" destination="ate-5B-jhc" id="djR-df-ePR"/>
                                             <outlet property="bookTitle" destination="Bfl-8X-YGZ" id="N1j-au-qmH"/>
                                         </connections>
                                     </tableViewCell>
@@ -75,18 +75,18 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="sharedBookTableView" destination="KyW-Xh-5KM" id="88W-aT-aQK"/>
-                        <segue destination="eEj-70-M1W" kind="show" identifier="SharedBook" id="JFw-XL-jVo"/>
+                        <outlet property="recommendedBookTableView" destination="KyW-Xh-5KM" id="88W-aT-aQK"/>
+                        <segue destination="eEj-70-M1W" kind="show" identifier="RecommendedBook" id="JFw-XL-jVo"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="786" y="297"/>
         </scene>
-        <!--Shared Book View Controller-->
+        <!--Recommended Book View Controller-->
         <scene sceneID="hv1-2y-rLw">
             <objects>
-                <viewController id="eEj-70-M1W" customClass="SharedBookViewController" customModule="NowIAmReading" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="eEj-70-M1W" customClass="RecommendedBookViewController" customModule="NowIAmReading" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="GAf-JP-ZVx"/>
                         <viewControllerLayoutGuide type="bottom" id="l3m-qs-pde"/>
@@ -173,7 +173,7 @@
                                 <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <state key="normal" image="upload_filled.png"/>
                                 <connections>
-                                    <action selector="reshare:" destination="eEj-70-M1W" eventType="touchUpInside" id="W4N-I0-2bP"/>
+                                    <action selector="recommend:" destination="eEj-70-M1W" eventType="touchUpInside" id="W4N-I0-2bP"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="chs-Hb-Sr5">
@@ -244,7 +244,7 @@
                         <outlet property="bookRating3" destination="Hfh-3y-36C" id="Ka0-XI-YIf"/>
                         <outlet property="bookRating4" destination="kzg-sF-bz4" id="bHY-AZ-272"/>
                         <outlet property="bookRating5" destination="QVh-Kb-iMm" id="r9n-kW-LGp"/>
-                        <outlet property="bookSharedBy" destination="RyT-Qf-d4v" id="sSJ-KY-VXy"/>
+                        <outlet property="bookRecommendedBy" destination="RyT-Qf-d4v" id="sSJ-KY-VXy"/>
                         <outlet property="bookSharingText" destination="DK1-qb-n5y" id="cCQ-wp-yYM"/>
                         <outlet property="bookTitle" destination="xMM-22-u18" id="4xT-9L-GKe"/>
                     </connections>
